201x-xx-xx:
    * version 3.4
    * Scrolling some divs failed previously when using "j". Should work now. Thanks dom.lobue
    * hinttags fixes for gmail and other apps
    * Pressing Tab works correctly in hint mode when the list of hints has been filtered
    * Search history is accessible again
    * Display correct status messages when a text search reaches either end of the buffer

2011-11-13:
    * version 3.3
    * Firefox 8 and 9 compatibility fixes
    * Reworked mode message handling. The mode message can be shown simultaneoulsy
      with other messages now. Also changed the visual display of a mode.
    * Single line message output with :echo are shown again

2011-06-03:
    * version 3.2
    * Compatibility fixes for Firefox 5.x and 6.x. Also bumped maxVersion accordingly
    * Make search more reliable
    * Reworked mode handling a bit. While in the end this will be much
      cleaner, it might have some regressions. Please report!
    * Better logging: :messages is now the main location for any informative
      but also error messages (apart from a few very early loading errors,
      which are still dump'ed to the console since the :messages mechanism
      might be broken/unavailable in this case).
      Also show StackTraces on internal errors to faciliate debugging
    * More consistent messages after (un)successful commands
    * Remove CSS hack to get rid of tab scrolling when you have many tabs because some
      users complained about this change. If you want to allow your tabs to shrink
      as much as possible, but this into your .vimperatorrc file:
      :js styles.addSheet(false, "mintabwidth", "chrome://*", ".tabbrowser-tab[fadein]:not([pinned]) { min-width: 16px !important; } .scrollbutton-up, .scrollbutton-down { display:none; }");
      This could make a nice vimperator plugin with a :set mintabwith=... option.
    * The heart indiciator for bookmarked pages also shows the correct
      state now when hovering over a link